# triangulator

./: README.md  pyproject.toml  triangles.py
triangles/: triangles_numpy_parallel.py  triangles_pil.py  triangles_pil_numpy.py
